--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,17 +10,14 @@ jobs:
   build_and_push_docker_images:
     runs-on: ubuntu-latest
 
-    steps:
-      # Paso 1: Descargar el código de tu repositorio
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+    steps: # <- Asegúrate de que "steps:" tiene 4 espacios de indentación
+      - name: Checkout Repository # <- Asegúrate de que "- name:" tiene 6 espacios de indentación
+        uses: actions/checkout@v4 # <- Asegúrate de que "uses:" tiene 8 espacios de indentación
 
-      # Paso 2: Configurar Buildx para construir imágenes Docker
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - name: Set up Docker Buildx # <- Este también debe tener 6 espacios
+        uses: docker/setup-buildx-action@v3 # <- Este también debe tener 8 espacios
 
-      # Paso 3: Iniciar sesión en Docker Hub
-      - name: Login to Docker Hub
+      - name: Login to Docker Hub # <- Y así sucesivamente para todos los pasos
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
