--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,7 +26,7 @@ jobs:
       # Paso 4: Construir y empujar la imagen del backend
       - name: Build and Push Backend Image
         run: |
-          DOCKER_REPO="javidocky/proyecto-pacientes-medicos-backend" # ¡CAMBIA ESTO!
+          DOCKER_REPO="javidocky/proyecto-pacientes-medicos-backend" #
           TAG="latest"
           if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
             TAG="prod-${{ github.sha }}"
@@ -41,7 +41,7 @@ jobs:
       # Paso 5: Construir y empujar la imagen del frontend
       - name: Build and Push Frontend Image
         run: |
-          DOCKER_REPO="javidocky/proyecto-pacientes-medicos-frontend" # ¡CAMBIA ESTO!
+          DOCKER_REPO="javidocky/proyecto-pacientes-medicos-frontend" # 
           TAG="latest"
           if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
             TAG="prod-${{ github.sha }}"
